--- a/basic/module-03/nginx-deploy.yaml
+++ b/basic/module-03/nginx-deploy.yaml
@@ -11,8 +11,7 @@ spec:
     metadata:
       labels:
         app: nginx
-    spec:
+    spec: 
       containers:
         - name: nginx
-          image: nginx
-          
+          image: nginx:latest
