--- a/deploy-examples/guestbook-go/redis-master-controller.yaml
+++ b/deploy-examples/guestbook-go/redis-master-controller.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: redis-master
-          image: redis
+          image: k8s.mirror.nju.edu.cn/redis:e2e
           ports:
             - name: redis-server
               containerPort: 6379 
