--- a/k8s-service/zarf/docker/dockerfile
+++ b/k8s-service/zarf/docker/dockerfile
@@ -3,8 +3,10 @@ ENV CGO_ENABLE 0
 ARG BUILD_ARG
 
 
-COPY . /service
+COPY main.go /service
 
+WORKDIR /service
+RUN go build -ldfalgs "-X main.build=${BUILD_ARG}"
 
 
 
