--- a/deploy-examples/k8s-demo-mall/src/product/Dockerfile-multistage
+++ b/deploy-examples/k8s-demo-mall/src/product/Dockerfile-multistage
@@ -1,7 +1,8 @@
 FROM maven:3.5-jdk-8-alpine as builder
 COPY src /usr/src/app/src
 COPY pom.xml /usr/src/app
-RUN mvn -f /usr/src/app/pom.xml clean package
+COPY settings.xml /usr/src/app
+RUN mvn -f /usr/src/app/pom.xml  -s /usr/src/app/settings.xml --batch-mode  clean package
 
 FROM openjdk:8-jdk-alpine
 RUN mkdir /app
