--- a/deploy-examples/k8s-demo-mall/src/shopcart/Dockerfile
+++ b/deploy-examples/k8s-demo-mall/src/shopcart/Dockerfile
@@ -1,21 +1,16 @@
-# FROM golang:alpine
-
-# WORKDIR /app
-# COPY build/. /app
-
-# EXPOSE 6000
-# CMD ["./main"]
-
-
 # build
-FROM golang:alpine AS builder
-ADD . /src
-RUN cd /src && go build -o main
+FROM golang:alpine3.15 AS builder
+ARG GOPROXY=https://goproxy.cn,direct
+WORKDIR /src
+COPY go.mod .
+COPY go.sum .
+RUN go mod download -x
+COPY . /src
+RUN go build -o main -x
 
 # runtime
-FROM alpine
+FROM alpine:3.17
 WORKDIR /app
 COPY --from=builder /src/main /app/
 COPY ./config/config.yaml /app/config/config.yaml
 EXPOSE 6000
-
