--- a/deploy-examples/k8s-demo-mall/src/mall/mall.conf
+++ b/deploy-examples/k8s-demo-mall/src/mall/mall.conf
@@ -1,14 +1,22 @@
-server { 
-  listen       8000;
-  index   index.html;
+# server { 
+#   listen       8000;
+#   index   index.html;
 
-  location / {
-    proxy_http_version 1.1;
-    proxy_pass https://training-1251707795.file.myqcloud.com;
-    rewrite ^/(.*)$ /mall/index.html break;
-  }
-  location ^~/api/product/ {
-    proxy_http_version 1.1;
-    proxy_pass      http://172.17.0.1:3000/;
-  }
+#   location / {
+#     proxy_http_version 1.1;
+#     proxy_pass https://training-1251707795.file.myqcloud.com;
+#     rewrite ^/(.*)$ /mall/index.html break;
+#   }
+#   location ^~/api/product/ {
+#     proxy_http_version 1.1;
+#     proxy_pass      http://172.17.0.1:3000/;
+#   }
+# }
+
+server {
+        listen 80;
+        server_name cos.rondochen.com;
+        root /data/cos ;
+        access_log /var/log/nginx/mall_access.log;
+        error_log /var/log/nginx/mall_error.log;
 }
