--- a/deploy-examples/k8s-demo-mall/src/mall2/Dockerfile-multistage
+++ b/deploy-examples/k8s-demo-mall/src/mall2/Dockerfile-multistage
@@ -2,7 +2,7 @@ FROM node:19.1 as builder
 ENV NODE_OPTIONS=--openssl-legacy-provider
 WORKDIR /app
 COPY . /app
-RUN npm install --force 
+RUN npm install --force  --registry=https://registry.npm.taobao.org
 RUN npm run build
 
 FROM nginx:alpine
