--- a/k8s-service/Makefile
+++ b/k8s-service/Makefile
@@ -1,4 +1,13 @@
 SHELL := /bin/bash
+VERSION := 1.0
 
 run:
 	go run main.go
+
+servcie:
+	docker build \
+		-f zarf/docker/dockerfile \
+		-t salse-api-amd64:$(VERSION) \
+		--build-arg BUILD_REF=$(VERSION) \
+		--build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") \
+		.
