--- a/k8s-service/zarf/docker/dockerfile
+++ b/k8s-service/zarf/docker/dockerfile
@@ -9,9 +9,9 @@ RUN go build -ldflags "-X main.build=${BUILD_REF}" -o service
 FROM alpine:3.14
 ARG BUILD_REF
 ARG BUILD_DATE
-COPY --from=build_sales-api /service /service/service
+WORKDIR /service
+COPY --from=build_sales-api /service/service ./
 
-WORKDIR /service/service
 
 CMD ["./service"]
 
