--- a/k8s-service/Makefile
+++ b/k8s-service/Makefile
@@ -11,3 +11,9 @@ service:
 		--build-arg BUILD_REF=$(VERSION) \
 		--build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` \
 		.
+
+
+dev-status:
+	kubectl get pod 		-owide
+	kubectl get deployment 	-owide
+	kubectl get svc 		-owide
