--- a/k8s-service/zarf/docker/dockerfile
+++ b/k8s-service/zarf/docker/dockerfile
@@ -4,7 +4,9 @@ ARG BUILD_REF
 COPY . /service
 RUN ls -lh
 WORKDIR /service
-RUN go build -ldflags "-X main.build=${BUILD_REF}" -o service
+RUN      go env -w GO111MODULE=on \
+      && go env -w GOPROXY=https://goproxy.cn,direct \
+      && go build -ldflags "-X main.build=${BUILD_REF}" -o service
 
 FROM alpine:3.14
 ARG BUILD_REF
