--- a/k8s-service/zarf/k8s/base/sales-pod/base-sales.yaml
+++ b/k8s-service/zarf/k8s/base/sales-pod/base-sales.yaml
@@ -22,7 +22,7 @@ spec:
       terminationGracePeriodSeconds: 60
       containers:
       - name: sales-api
-        image: sales-api-amd64:1.0
+        image: sales-api-image
 
 
 
