--- a/k8s-service/zarf/docker/dockerfile.sales-api
+++ b/k8s-service/zarf/docker/dockerfile.sales-api
@@ -5,7 +5,7 @@ COPY . /service
 WORKDIR /service/app/services/sales-api
 RUN      go env -w GO111MODULE=on \
       && go env -w GOPROXY=https://goproxy.cn,direct \
-      && go build -ldflags "-X main.build=${BUILD_REF}" -o sales-api
+      && CGO_ENABLED=0 go build -ldflags "-X main.build=${BUILD_REF}" -o sales-api
 
 FROM alpine:3.14
 ARG BUILD_REF
