--- a/deploy-examples/k8s-demo-mall/install/kubernetes/mysql-restore.yaml
+++ b/deploy-examples/k8s-demo-mall/install/kubernetes/mysql-restore.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
       - name: mysql-client
-        image: rondochen/mysql-data:1.0
+        image: registry.gitlab.com/localdetector/public-docker-registry/k8s-examples/mysql-data:1.0
         command: 
           - bash
           - "-c"
