--- a/k8s-service/zarf/k8s/kind/kind-config.yaml
+++ b/k8s-service/zarf/k8s/kind/kind-config.yaml
@@ -7,4 +7,8 @@ nodes:
     hostPort: 3000
   - containerPort: 4000
     hostPort: 4000
+  - containerPort: 3001
+    hostPort: 3001
+  - containerPort: 4001
+    hostPort: 4001
 
