--- a/deploy-examples/k8s-demo-mall/install/kubernetes/mysql-hbj.yaml
+++ b/deploy-examples/k8s-demo-mall/install/kubernetes/mysql-hbj.yaml
@@ -58,4 +58,25 @@ spec:
           initialDelaySeconds: 30
           periodSeconds: 5
           timeoutSeconds: 10
-
+        volumeMounts:
+        - name: data
+          mountPath: /var/lib/mysql
+          subPath: mysql
+        - name: conf
+          mountPath: /etc/mysql/conf.d
+      volumes:
+      - name: conf
+        emptyDir: {}
+      - name: config-map
+        configMap:
+          name: mysql
+  volumeClaimTemplates:
+    - metadata:
+        name: data
+        annotations:
+          volume.beta.kubernetes.io/storage-class: "local-storage"
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: 2Gi
