--- a/deploy-examples/k8s-demo-mall/install/kubernetes/passport.yaml
+++ b/deploy-examples/k8s-demo-mall/install/kubernetes/passport.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: passport
-        image: rondochen/passport:1.0
+        image: registry.gitlab.com/localdetector/public-docker-registry/k8s-examples/passport:1.0
         imagePullPolicy: Always
         env:
           - name: EGG_SERVER_ENV
@@ -71,10 +71,3 @@ spec:
         ports:
         - containerPort: 5000
           protocol: TCP
-        resources:
-          limits:
-            cpu: 200m
-            memory: 128Mi
-          requests:
-            cpu: 200m
-            memory: 128Mi
